<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/clDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_gradient_radius_5"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_gradient_black_transparent"
                app:collapsedTitleTextAppearance="@style/CollapsingToolbar.TextMovie.Collapse"
                app:contentScrim="@color/white"
                app:expandedTitleTextAppearance="@style/CollapsingToolbar.TextMovie.Expanded"
                app:expandedTitleTextColor="@color/white"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                tools:title="Title">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivThumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginTop="24dp"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/ic_arrow_back" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:paddingBottom="24dp">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvIvPoster"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="0dp"
                    app:layout_constraintDimensionRatio="2:3"
                    app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivPoster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:src="@color/tertiary" />
                </androidx.cardview.widget.CardView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvStatusLanguage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/status_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@id/guidelineCenter"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSpokenLanguage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/spoken_language_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@id/guidelineCenter"
                    app:layout_constraintTop_toBottomOf="@id/tvStatusLanguage" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvReleaseDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/release_date_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@id/guidelineCenter"
                    app:layout_constraintTop_toBottomOf="@id/tvSpokenLanguage" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvGenres"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/genres_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@id/guidelineCenter"
                    app:layout_constraintTop_toBottomOf="@id/tvReleaseDate" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/rating_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@id/guidelineCenter"
                    app:layout_constraintTop_toBottomOf="@id/tvGenres" />

                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/ratingBar"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:numStars="10"
                    android:stepSize="0.1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@id/guidelineCenter"
                    app:layout_constraintTop_toBottomOf="@id/tvRating" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrierMovieDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:barrierMargin="8dp"
                    app:constraint_referenced_ids="ratingBar,cvIvPoster" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRecommendationLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendations"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/barrierMovieDetail" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvRecommendation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/tvRecommendationLabel"
                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_movie_recommendation" />

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/loadingRecommendationProgress"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="20dp"
                    android:indeterminateTint="@color/secondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvRecommendationLabel" />

                <androidx.constraintlayout.widget.Barrier
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:barrierMargin="8dp"
                    app:constraint_referenced_ids="rcvRecommendation,loadingRecommendationProgress" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/favorite"
        android:textColor="@color/white"
        app:backgroundTint="@color/secondary"
        app:icon="@drawable/ic_favorite"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loadingFavoriteProgress"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:elevation="10dp"
        android:indeterminateTint="@color/secondary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/fabFavorite"
        app:layout_constraintEnd_toEndOf="@id/fabFavorite"
        app:layout_constraintStart_toStartOf="@id/fabFavorite"
        app:layout_constraintTop_toTopOf="@id/fabFavorite"
        tools:visibility="visible" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loadingProgress"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:indeterminateTint="@color/secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>